-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0
-
Windows 7, 64bit (MSVC2013 64bit)
-
531a2b1b1c26127f75bfe1230051db615e5874c5 (qtbase/5.6, 31.8.2016, 5.6.2)
Microsoft Application Verifier reports two errors when QML FileDialog is used:
- ErrorCode 61D: Creating executable heap; when opening FileDialog
- ErrorCode 900: A heap allocation was leaked; when closing an application
The problem can be reproduced with Qt Example System Dialogs Gallery. Steps to reproduce:
1. Add systemdialogs.exe to Application Verifier and enable Basic > Leak and Memory, and enable ExecWritePage of Memory (Select Memory > Right click of mouse > Properties)
2. Execute systemdialogs.exe from WinDbg
3. When System Dialogs Gallery example application is up and running, open file (File tab > Open)
4. "ErrorCode 61D: Creating executable heap" is shown in WinDbg
5. Close the FileDialog and the application
6. "ErrorCode 900: A heap allocation was leaked" is shown
Note: Heap allocation leak doesn't happen when QFileDialog is used.
See attached qtbug_detailed_instructions.txt for more detailed steps to reproduce and full error texts.
- relates to
-
QTBUG-55459 Windows: QML FileDialog keeps USB drive locked if user navigates to the drive, until application is closed
-
- Reported
-
-
QTBUG-58678 Native FileDialog corrupts memory
-
- Closed
-
-
QTBUG-58762 QFileDialog::getOpenFileName crashes with heap-use-after-free
-
- Closed
-